Perkin-UAT/force-app/main/default/objects/WebCart/fields/B2B_Is_Subscription__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Is Subscription</label>
    <type>Checkbox</type>
</CustomField>