Perkin-UAT/force-app/main/default/objects/WebCart/fields/B2B_Shipping_Provider_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shipping_Provider_Account_Number__c</fullName>
    <label>B2B Shipping Provider Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>