Perkin-UAT/force-app/main/default/objects/WebCart/fields/B2B_Special_Instruction__c.field-meta.xml
<CustomField>
    <fullName>B2B_Special_Instruction__c</fullName>
    <description>Used to store the special instructions during checkout. Perk-292</description>
    <label>B2B Special Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>