Perkin-UAT/force-app/main/default/objects/WebCart/fields/B2B_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>B2B_Subscriptions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Subscription</label>
    <referenceTo>B2B_Subscriptions__c</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>