Perkin-UAT/force-app/main/default/objects/WebCart/fields/Billing_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Billing_FirstName__c</fullName>
    <label>Billing FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>