Perkin-UAT/force-app/main/default/objects/WebCart/fields/Billing_LastName__c.field-meta.xml
<CustomField>
    <fullName>Billing_LastName__c</fullName>
    <label>Billing LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>