Perkin-UAT/force-app/main/default/objects/WebCart/fields/Payment_Intent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Intent__c</fullName>
    <label>Payment Intent Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>